# RootAI

./: .gitmodules  CMakeLists.txt  build_command.txt  main.cpp
assets/boards/: autumn.json  lake.json  mountain.json  winter.json
include/: board_data.hpp  card_data.hpp  card_pile.hpp  clearing_data.hpp  deck_data.hpp  discard_pile_data.hpp  factions_data.hpp  forest_data.hpp  game.hpp  game_data.hpp  game_types.hpp  token_data.hpp
src/: board_data.cpp  card_data.cpp  card_pile.cpp  clearing_data.cpp  deck_data.cpp  discard_pile_data.cpp  factions_data.cpp  forest_data.cpp  game.cpp  game_data.cpp  game_types.cpp  token_data.cpp
